# plook

./: pyproject.toml
plook/: main.py
plook/ui/: FileBrowserWidget.py  PlotOptionsWidget.py  PlotWidget.py  __init__.py
